updated 10rcell track

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -451,7 +451,7 @@
 					<td bgcolor="#bdb4b3"><br><center><font style="font-weight:bolder;font-size:100%;">Mainline</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP10 -->
-						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 10</font>
+						<td bgcolor={{op_color.10}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 10</font>
 							<font style="font-weight:bolder;font-size:85%;"><br>({{op.10}})</font></center></td>
 						<td bgcolor={{codes.0.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 							<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.0.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.0.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -472,7 +472,7 @@
 										<font style="font-weight:bolder;font-size:70%;">({{codes.3.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP30 -->
-						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 30</font>
+						<td bgcolor={{op_color.30}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 30</font>
 							<font style="font-weight:bolder;font-size:85%;"><br>({{op.30}})</font></center></td>
 						<td bgcolor={{codes.4.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 							<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.4.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.4.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -486,7 +486,7 @@
 							<font style="font-weight:bolder;font-size:70%;">({{codes.5.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP40 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 40</font>
+					<td bgcolor={{op_color.40}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 40</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.40}})</font></center></td>
 					<td bgcolor={{codes.6.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.6.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.6.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -498,7 +498,7 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.7.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP50 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 50</font>
+					<td bgcolor={{op_color.50}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 50</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.50}})</font></center></td>
 					<td bgcolor={{codes.8.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.8.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.8.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -510,7 +510,7 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.9.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP60 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 60</font>
+					<td bgcolor={{op_color.60}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 60</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.60}})</font></center></td>
 					<td bgcolor={{codes.10.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.10.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.10.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -518,7 +518,7 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.10.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP70 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 70</font>
+					<td bgcolor={{op_color.70}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 70</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.70}})</font></center></td>
 					<td bgcolor={{codes.11.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.11.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.11.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -526,7 +526,7 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.11.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP80 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 80</font>
+					<td bgcolor={{op_color.80}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 80</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.80}})</font></center></td>
 					<td bgcolor={{codes.12.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.12.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.12.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -534,7 +534,7 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.12.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP30 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 90</font>
+					<td bgcolor={{op_color.90}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 90</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.90}})</font></center></td>
 						<td style="border-radius: 10px;" bgcolor={{codes.29.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 							<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.29.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.29.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -542,7 +542,7 @@
 							<font style="font-weight:bolder;font-size:70%;">({{codes.29.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP100 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 100</font>
+					<td bgcolor={{op_color.100}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 100</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.100}})</font></center></td>
 					<td bgcolor={{codes.13.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.13.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.13.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -550,7 +550,7 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.13.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP110 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 110</font>
+					<td bgcolor={{op_color.110}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 110</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.110}})</font></center></td>
 					<td bgcolor={{codes.14.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.14.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.14.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -558,7 +558,7 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.14.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP120 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">Final</font>
+					<td bgcolor={{op_color.120}} style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">Final</font>
                     <font style="font-weight:bolder;font-size:85%;"><br>({{codes.30.3}})</font></center><br></td>
 					<td bgcolor={{codes.30.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.30.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.30.0}}', 'newwindow', 'width=1400, height=600'); return false;">
