added kiosk tech along with my tracking fix

--- a/trakberry/templates/kiosk/kiosk_style.html
+++ b/trakberry/templates/kiosk/kiosk_style.html
@@ -49,6 +49,24 @@
 		box-shadow: 0 8px #666;
 		transform: translateY(8px);
 	}
+	.button3 {
+		width: 60%;
+		height: 210px;
+		text-align: center;
+		cursor: pointer;
+		outline: none;
+		color: #000000;
+		background-color: rgb(231, 181, 161);
+		border: none;
+		border-radius: 15px;
+		box-shadow: 0 15px #999;
+	}
+	.button3:hover {background-color: rgb(196, 159, 125)}
+	.button3:active {
+		background-color: rgb(196, 159, 125);
+		box-shadow: 0 8px #666;
+		transform: translateY(8px);
+	}
 </style>
 <!-- {% block grid %} -->
 	<!-- Include Styling for Buttons and Frames -->
