--- a/trakberry/templates/tech_login.html
+++ b/trakberry/templates/tech_login.html
@@ -21,8 +21,9 @@
 
 <b><u>Tech Name</b></u>&nbsp;
 <select name ="user">
-	
+	<option value="Crystal Piquette">Crystal Piquette</option>
 	<option value="Dave McLaren">Dave McLaren</option>
+	<option value="Darryk Kunkel">Darryk Kunkel</option>
 	<option value="Ervin Kuepfer">Ervin Kuepfer</option>
 	<option value="Jered Pankratz">Jered Pankratz</option>
 	<option value="James Kuepfer">James Kuepfer</option>
@@ -35,7 +36,9 @@
 	<option value="Mayank Gehlot">Mayank Gehlot</option>
 	<option value="Muoi Le">Muoi Le</option>
 	<option value="Paul Wilson">Paul Wilson</option>
+	<option value="Rajesh Byreddy">Rajesh Byreddy</option>
 	<option value="Rob Wood">Rob Wood</option>
+	<option value="Rick Woodhouse">Rick Woodhouse</option>
 	<option value="Scott Smith">Scott Smith</option>
 	<option value="Scott Warner">Scott Warner</option>	
 	<option value="Surjit Toora">Surjit Toora</option>
