updated 10R80 Cell track for 10R60

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -158,7 +158,7 @@
     <div class="asset-count">({{codes.0.3}})</div>
 </div>
 
-                    <div class="asset borders" style="background-color:#009700">
+                    <div class="asset borders" style="background-color:{{codes.1.2}}">
     <div class="asset-number">
         <a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.1.2}}"
             onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.1.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -241,8 +241,8 @@
                     </div>
                     <div class="asset borders" style="background-color:{{codes.8.2}}">
     <div class="asset-number">
-        <a href="/dashboard/track_graph_track/get/1508/"
-            onclick="window.open('/dashboard/track_graph_track/get/1508/', 'newwindow', 'width=1400, height=600'); return false;">
+        <a href="/track_graph_track/get/1508/"
+            onclick="window.open('/track_graph_track/get/1508/', 'newwindow', 'width=1400, height=600'); return false;">
             1508</a>
     </div>
     <div class="asset-count">({{codes.8.3}})</div>
@@ -250,8 +250,8 @@
 
                     <div class="asset borders" style="background-color:{{codes.9.2}}">
     <div class="asset-number">
-        <a href="/dashboard/track_graph_track/get/1532/"
-            onclick="window.open('/dashboard/track_graph_track/get/1532/', 'newwindow', 'width=1400, height=600'); return false;">
+        <a href="/track_graph_track/get/1532/"
+            onclick="window.open('/track_graph_track/get/1532/', 'newwindow', 'width=1400, height=600'); return false;">
             1532</a>
     </div>
     <div class="asset-count">({{codes.9.3}})</div>
@@ -265,8 +265,8 @@
                     </div>
                     <div class="asset borders" style="background-color:{{codes.10.2}}">
     <div class="asset-number">
-        <a href="/dashboard/track_graph_track/get/1509/"
-            onclick="window.open('/dashboard/track_graph_track/get/1509/', 'newwindow', 'width=1400, height=600'); return false;">
+        <a href="/track_graph_track/get/1509/"
+            onclick="window.open('/track_graph_track/get/1509/', 'newwindow', 'width=1400, height=600'); return false;">
             1509</a>
     </div>
     <div class="asset-count">({{codes.10.3}})</div>
@@ -278,7 +278,7 @@
                         <div class="asset-number">OP70</div>
                         <div class="asset-count">({{op.70}})</div>
                     </div>
-                    <div class="asset borders" style="background-color:#009700">
+                    <div class="asset borders" style="background-color:{{request.session.fixed_color}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1514/"
             onclick="window.open('/dashboard/track_graph_track/get/1514/', 'newwindow', 'width=1400, height=600'); return false;">
@@ -293,7 +293,7 @@
                         <div class="asset-number">OP80</div>
                         <div class="asset-count">({{op.80}})</div>
                     </div>
-                    <div class="asset borders" style="background-color:#009700">
+                    <div class="asset borders" style="background-color:{{request.session.fixed_color}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1510/"
             onclick="window.open('/dashboard/track_graph_track/get/1510/', 'newwindow', 'width=1400, height=600'); return false;">
@@ -467,7 +467,7 @@
 
                 </div>
                 <div class="op">  <!-- OP 70  -->
-                    <div class="asset borders" style="background-color:#009700">
+                    <div class="asset borders" style="background-color:{{request.session.fixed_color}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1531/"
             onclick="window.open('/dashboard/track_graph_track/get/1531/', 'newwindow', 'width=1400, height=600'); return false;">
@@ -478,7 +478,7 @@
 
                 </div>
                 <div class="op">  <!-- OP 80  -->
-                    <div class="asset borders" style="background-color:#009700">
+                    <div class="asset borders" style="background-color:{{request.session.fixed_color}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1527/"
             onclick="window.open('/dashboard/track_graph_track/get/1527/', 'newwindow', 'width=1400, height=600'); return false;">
@@ -649,7 +649,7 @@
             </div>
             <div class="subheading borders">Mainline</div>
                 <div class="op">  <!-- OP 10  -->
-                    <div class="c-op borders" style="background-color:{{op_color_60.10}}">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP10</div>
                         <div class="asset-count">({{op_60.10}})</div>
                     </div>
@@ -682,120 +682,120 @@
 
                 </div>
                 <div class="op">  <!-- OP 30  -->
-                    <div class="c-op borders" style="background-color:#FF9333">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP30</div>
-                        <div class="asset-count">(598)</div>
+                        <div class="asset-count">({{op_60.30}})</div>
                     </div>
-                    <div class="asset borders" style="background-color:#D5D5D5">
+                    <div class="asset borders" style="background-color:{{codes_60.3.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1529/"
             onclick="window.open('/dashboard/track_graph_track/get/1529/', 'newwindow', 'width=1400, height=600'); return false;">
             1529</a>
     </div>
-    <div class="asset-count">(0)</div>
+    <div class="asset-count">({{codes_60.3.3}})</div>
 </div>
 
-                    <div class="asset borders" style="background-color:#4FC34F">
+                    <div class="asset borders" style="background-color:{{codes_60.5.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/776/"
             onclick="window.open('/dashboard/track_graph_track/get/776/', 'newwindow', 'width=1400, height=600'); return false;">
             776</a>
     </div>
-    <div class="asset-count">(156)</div>
+    <div class="asset-count">({{codes_60.5.3}})</div>
 </div>
 
-                    <div class="asset borders" style="background-color:#009700">
+                    <div class="asset borders" style="background-color:{{codes_60.6.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1824/"
             onclick="window.open('/dashboard/track_graph_track/get/1824/', 'newwindow', 'width=1400, height=600'); return false;">
             1824</a>
     </div>
-    <div class="asset-count">(239)</div>
+    <div class="asset-count">({{codes_60.6.3}})</div>
 </div>
 
-                    <div class="asset borders" style="background-color:#4FC34F">
+                    <div class="asset borders" style="background-color:{{codes_60.4.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1543/"
             onclick="window.open('/dashboard/track_graph_track/get/1543/', 'newwindow', 'width=1400, height=600'); return false;">
             1543</a>
     </div>
-    <div class="asset-count">(203)</div>
+    <div class="asset-count">({{codes_60.4.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 40  -->
-                    <div class="c-op borders" style="background-color:#F9FF33">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP40</div>
-                        <div class="asset-count">(681)</div>
+                        <div class="asset-count">({{op_60.40}})</div>
                     </div>
-                    <div class="asset borders" style="background-color:#009700">
+                    <div class="asset borders" style="background-color:{{codes_60.7.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1804/"
             onclick="window.open('/dashboard/track_graph_track/get/1804/', 'newwindow', 'width=1400, height=600'); return false;">
             1804</a>
     </div>
-    <div class="asset-count">(132)</div>
+    <div class="asset-count">({{codes_60.7.3}})</div>
 </div>
 
-                    <div class="asset borders" style="background-color:#4FC34F">
+                    <div class="asset borders" style="background-color:{{codes_60.8.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1805/"
             onclick="window.open('/dashboard/track_graph_track/get/1805/', 'newwindow', 'width=1400, height=600'); return false;">
             1805</a>
     </div>
-    <div class="asset-count">(549)</div>
+    <div class="asset-count">({{codes_60.8.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 50  -->
-                    <div class="c-op borders" style="background-color:#FF9333">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP50</div>
-                        <div class="asset-count">(630)</div>
+                        <div class="asset-count">({{op_60.50}})</div>
                     </div>
-                    <div class="asset borders" style="background-color:#F7BA84">
+                    <div class="asset borders" style="background-color:{{codes_60.9.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1806/"
             onclick="window.open('/dashboard/track_graph_track/get/1806/', 'newwindow', 'width=1400, height=600'); return false;">
             1806</a>
     </div>
-    <div class="asset-count">(630)</div>
+    <div class="asset-count">({{codes_60.9.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 60  -->
-                    <div class="c-op borders" style="background-color:#FF9333">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP60</div>
-                        <div class="asset-count">(649)</div>
+                        <div class="asset-count">({{op_60.60}})</div>
                     </div>
-                    <div class="asset borders" style="background-color:#FF0400">
+                    <div class="asset borders" style="background-color:{{codes_60.10.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1808/"
             onclick="window.open('/dashboard/track_graph_track/get/1808/', 'newwindow', 'width=1400, height=600'); return false;">
             1808</a>
     </div>
-    <div class="asset-count">(649)</div>
+    <div class="asset-count">({{codes_60.10.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 70  -->
-                    <div class="c-op borders" style="background-color:#FF9333">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP70</div>
-                        <div class="asset-count">(658)</div>
+                        <div class="asset-count">({{op_60.70}})</div>
                     </div>
-                    <div class="asset borders" style="background-color:#F6F687">
+                    <div class="asset borders" style="background-color:{{codes_60.11.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1810/"
             onclick="window.open('/dashboard/track_graph_track/get/1810/', 'newwindow', 'width=1400, height=600'); return false;">
             1810</a>
     </div>
-    <div class="asset-count">(658)</div>
+    <div class="asset-count">({{codes_60.11.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 80  -->
-                    <div class="c-op borders" style="background-color:#FF9333">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP80</div>
-                        <div class="asset-count">(655)</div>
+                        <div class="asset-count">({{op_60.80}})</div>
                     </div>
                     <div class="asset borders" style="background-color:#F7BA84">
     <div class="asset-number">
@@ -803,14 +803,14 @@
             onclick="window.open('/dashboard/track_graph_track/get/1815/', 'newwindow', 'width=1400, height=600'); return false;">
             1815</a>
     </div>
-    <div class="asset-count">(655)</div>
+    <div class="asset-count">({{codes_60.12.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 90  -->
-                    <div class="c-op borders" style="background-color:#FF9333">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP90</div>
-                        <div class="asset-count">(666)</div>
+                        <div class="asset-count">({{op_60.100}})</div>
                     </div>
                     <div class="asset borders" style="background-color:#A4F6A4">
     <div class="asset-number">
@@ -818,14 +818,14 @@
             onclick="window.open('/dashboard/track_graph_track/get/1542/', 'newwindow', 'width=1400, height=600'); return false;">
             1542</a>
     </div>
-    <div class="asset-count">(666)</div>
+    <div class="asset-count">({{codes_60.13.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 100  -->
-                    <div class="c-op borders" style="background-color:#FF9333">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP100</div>
-                        <div class="asset-count">(666)</div>
+                        <div class="asset-count">({{op_60.100}})</div>
                     </div>
                     <div class="asset borders" style="background-color:#A4F6A4">
     <div class="asset-number">
@@ -833,12 +833,12 @@
             onclick="window.open('/dashboard/track_graph_track/get/1812/', 'newwindow', 'width=1400, height=600'); return false;">
             1812</a>
     </div>
-    <div class="asset-count">(666)</div>
+    <div class="asset-count">({{codes_60.13.3}})</div>
 </div>
 
                 </div>
                 <div class="op">  <!-- OP 110  -->
-                    <div class="c-op borders" style="background-color:#c0c0c0">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">OP110</div>
                         <div class="asset-count">(---)</div>
                     </div>
@@ -853,7 +853,7 @@
 
                 </div>
                 <div class="op">  <!-- OP 120  -->
-                    <div class="c-op borders" style="background-color:#c0c0c0">
+                    <div class="c-op borders" style="background-color:#D5D5D5">
                         <div class="asset-number">Final</div>
                         <div class="asset-count">(0)</div>
                     </div>
